--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,18 @@ dependencies = [
   "pydantic-settings>=2.2.0",
   "scikit-learn>=1.3.0",
   "numpy>=1.24.0",
+  "certifi>=2024.2.2",
   "joblib>=1.3.0",
 ]
 
 [project.optional-dependencies]
+dev = [
+  "ruff>=0.2.0",
+  "pytest>=7.4.0",
+  "httpx>=0.25.0",
+]
+
+[dependency-groups]
 dev = [
   "ruff>=0.2.0",
   "pytest>=7.4.0",
