Phase 3: add /ready endpoint and switch smoke/CI checks to readiness

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,15 @@ jobs:
       - name: Smoke test
         run: |
           docker run -d --name ticket-router -p 8000:8000 ticket-router:dev
-          sleep 2
-          curl -s http://localhost:8000/health | grep -q '"status":"ok"'
+          for i in 1 2 3 4 5 6 7 8 9 10; do
+            out="$(curl -sS http://localhost:8000/ready || true)"
+            if echo "$out" | grep -q '"ready":[[:space:]]*true'; then
+              echo "$out"
+              docker rm -f ticket-router
+              exit 0
+            fi
+            sleep 1
+          done
+          docker logs ticket-router
           docker rm -f ticket-router
+          exit 1
