--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
           python-version: "3.12"
       - uses: astral-sh/setup-uv@v3
       - run: uv sync --dev
+      - run: make format-check
       - run: make lint
       - run: make test
       - run: docker build -t ticket-router:dev .
